--- a/lec02.ipynb
+++ b/lec02.ipynb
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Multipliation first!\n",
+    "# Multiplication first!\n",
     "(3 * 4) ** 2"
    ]
   },
